fix(select): z-index? but not overflow

--- a/src/Components/FormComponents/Select/select.module.scss
+++ b/src/Components/FormComponents/Select/select.module.scss
@@ -25,6 +25,7 @@
   transition: border-color 0.2s, box-shadow 0.2s;
   gap: 8px;
   flex-wrap: wrap;
+  position: relative;
 }
 .toggle::after{
   content: '';
@@ -47,16 +48,14 @@
 }
 
 .dropdown {
-  position: relative;
-//  todo z-index fix
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .menu {
-  position: absolute;
-  top: calc(100% + 12px);
-  left: 0;
   width: 100%;
-  max-height: 225px;
+  max-height: 190px;
   overflow-y: auto;
   box-shadow: var(--effect-shadow-m-center);
   border-radius: var(--border-radius-m);
